# cpp-eeprom-24cxx

./: .gitmodules  CMakeLists.txt  README.md
cli/: clear.cpp  main.cpp  read.cpp  utils.cpp  write.cpp
cli/include/: base-command.hpp  utils.hpp
include/: eeprom24cxx.hpp  exceptions.hpp
src/: eeprom24cxx.cpp
